# sysmap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  README.md  TODO.md  todo.md
cmake/: FindHwloc.cmake  FindLscpu.cmake  FindSphinx.cmake  Findsqlite3.cmake
doc/: CMakeLists.txt  Makefile  doxyfile.in
doc/source/: conf.py.in  index.rst  smap.rst  sysmap.rst
lib/: CMakeLists.txt
lib/include/: array_value.hpp  extractor.hpp  extractor_set.hpp  map_value.hpp  output.hpp  scalar_value.hpp  sysquery.hpp  utils.hpp  value.hpp
lib/include/extractors/: cpuinfo_extractor.hpp  disk_extractor.hpp  filesystem_extractor.hpp  hwloc_extractor.hpp  infiniband_extractor.hpp  kernel_extractor.hpp  lustre_extractor.hpp  machine_info_extractor.hpp  memory_info_extractor.hpp  network_device_extractor.hpp  pci_device_extractor.hpp  swap_extractor.hpp
lib/include/hwloc/: hwloc_extractor.hpp  hwloc_machine_info_extractor.hpp  hwloc_memory_info_extractor.hpp  hwloc_pci_device_extractor.hpp
lib/include/linux/: cpuinfo_extractor.hpp  disk_extractor.hpp  filesystem_extractor.hpp  get_machine_info_extractor.hpp  infiniband_extractor.hpp  kernel_extractor.hpp  lscpu_extractor.hpp  lustre_extractor.hpp  machine_info_extractor.hpp  network_device_extractor.hpp  swap_extractor.hpp
lib/include/utils/: execution.hpp  file.hpp  log.hpp  network.hpp  parsing.hpp
lib/src/: array_value.cc  extractor.cc  extractor_set.cc  map_value.cc  output.cc  scalar_value.cc
lib/src/extractors/: cpuinfo_extractor.cc  disk_extractor.cc  filesystem_extractor.cc  hwloc_extractor.cc  infiniband_extractor.cc  kernel_extractor.cc  lustre_extractor.cc  machine_info_extractor.cc  memory_info_extractor.cc  network_device_extractor.cc  pci_device_extractor.cc  swap_extractor.cc
lib/src/hwloc/: hwloc_extractor.cc  hwloc_machine_info_extractor.cc  hwloc_memory_info_extractor.cc  hwloc_pci_device_extractor.cc
lib/src/linux/: cpuinfo_extractor.cc  disk_extractor.cc  filesystem_extractor.cc  get_machine_info_extractor.cc  infiniband_extractor.cc  kernel_extractor.cc  lscpu_extractor.cc  lustre_extractor.cc  machine_info_extractor.cc  network_device_extractor.cc  swap_extractor.cc
lib/src/utils/: execution.cc  file.cc  network.cc  parsing.cc
prototype/: delete_scale.py  elements.conf  example.conf
prototype/classes/: node.py
prototype/util/: util.py
python/: .gitignore  README.md  database.conf  setup.py  smap.py
python/sysmap/: graph.py
share/: datamodel.dia  fillDB.sh  run_sysmap.slurm
sildes/kick-off/: KIT-WP2.pptx  kickoff_tud_wp4.pptx
sildes/sppexa_annual_meeting_2016/: abstract_adafs.doc  adafs_at_sppexa_annual_meeting_2016_v4.pptx
src/: create_scale.py  example.conf  main.py
src/classes/: node.py
src/util/: util.py
sysmap/: CMakeLists.txt
sysmap/cmake/: Findsqlite3.cmake
sysmap/doc/source/: conf.py  index.rst
sysmap/include/: array_value.hpp  device.hpp  extractor.hpp  extractor_set.hpp  map_value.hpp  mounts.hpp  partitions.hpp  proc_partitions.hpp  scalar_value.hpp  sysmap.hpp  utils.hpp  value.hpp
sysmap/include/extractors/: filesystem_extractor.hpp
sysmap/include/linux/: filesystem_extractor.hpp
sysmap/lib/: CMakeLists.txt
sysmap/lib/include/: array_value.hpp  device.hpp  extractor.hpp  extractor_set.hpp  map_value.hpp  output.hpp  scalar_value.hpp  utils.hpp  value.hpp
sysmap/lib/include/extractors/: disk_extractor.hpp  filesystem_extractor.hpp  hwloc_extractor.hpp  infiniband_extractor.hpp
sysmap/lib/include/hwloc/: hwloc_extractor.hpp
sysmap/lib/include/linux/: disk_extractor.hpp  filesystem_extractor.hpp  infiniband_extractor.hpp
sysmap/lib/include/utils/: execution.hpp  log.hpp
sysmap/lib/src/: array_value.cc  extractor.cc  extractor_set.cc  map_value.cc  output.cc  scalar_value.cc  utils.cc
sysmap/lib/src/extractors/: disk_extractor.cc  filesystem_extractor.cc  hwloc_extractor.cc  infiniband_extractor.cc
sysmap/lib/src/hwloc/: hwloc_extractor.cc
sysmap/lib/src/linux/: disk_extractor.cc  filesystem_extractor.cc  infiniband_extractor.cc
sysmap/lib/src/utils/: execution.cc  file.cc
sysmap/python/: README.md  arango_insert.py  smap.py  sysmap-query.py
sysmap/python/sysmap/: database.py
sysmap/src/: array_value.cc  map_value.cc  mounts.cpp  proc_partitions.cpp  sysmap_main.cpp
sysmap/src/extractors/: filesystem_extractor.cc
sysmap/src/linux/: filesystem_extractor.cc
sysmap/test/: CMakeLists.txt  exec_each_line.cc  register_test.cc
sysmap/test_data/mounts/: prometheusfstab.txt  prometheusmtab.txt  prometheusprocmounts.txt  taurusi6584procmounts.txt  tauruslogin4procmounts.txt
sysmap/test_data/partitions/: prometheuspartitions.txt  taurusi6612partitions.txt  tauruslogin4partitions.txt
sysmap/tests/: test_mounts.cpp  test_partitions.cpp
test/: CMakeLists.txt  db_test.cc  exec_each_line.cc  exec_stdin_test.cc  filesystem_test.cc  hostname_test.cc  json_test.cc  parsing_test.cc  register_test.cc  sysquery_test.cpp  test_lscpu_extractor.cc  xml_test.cc
test/sql_data/: taurusi6487-sysmap.sql  taurusi6488-sysmap.sql  taurusi6489-sysmap.sql  taurusi6493-sysmap.sql
test_data/: out.json
test_data/ib_data/: ibnetdiscover_plain_taurusi6593
test_data/taurus/: taurusi4006-map.json  taurusi4014-map.json  taurusi4073-map.json  taurusi4074-map.json  taurusi4075-map.json  taurusi4077-map.json  taurusi4079-map.json  taurusi4081-map.json  taurusi4092-map.json  taurusi4097-map.json  taurusi4102-map.json  taurusi5001-map_net.json  taurusi5009-map_net.json  taurusi5097-map.json  taurusi5101-map.json  taurusi5102-map.json  taurusi5105-map.json  taurusi5106-map.json  taurusi5107-map.json  taurusi5108-map.json  taurusi5165-map.json  taurusi5166-map.json  taurusi5169-map.json  taurusi5170-map.json  taurusi5171-map.json  taurusi5172-map.json  taurusi5175-map.json  taurusi5199-map.json  taurusi5200-map.json  taurusi5201-map.json  taurusi5202-map.json  taurusi5203-map.json  taurusi5236-map.json  taurusi5237-map.json  taurusi5238-map.json  taurusi5239-map.json  taurusi5277-map.json  taurusi5278-map.json  taurusi5279-map.json  (+68 more)
(+7 files in other folders)
